@@ -1,3 +1,8 @@
+2001-12-30  Dan Espen  <dane@mk.telcordia.com>
+
+	* FvwmPager/x_pager.c (initialize_pager): Some cleanup of font handling.
+	Use library routines to guarantee error messages for font problems.
+
 2001-12-30  olicha  <olivier.chapuis@free.fr>
 
 	* FvwmIdent/FvwmIdent.h (struct target_struct):
