@@ -1,3 +1,8 @@
+2001-12-30  Dan Espen  <dane@mk.telcordia.com>
+
+	* libs/GetFont.c (GetFontSetOrFixed): Cleanup the message about the
+	fallback to fixed font so it shows the right font for I18N.
+
 2001-12-30  olicha  <olivier.chapuis@free.fr>  
 
 	* fvwm/window_flags.h: 
